# letsbuildmodels

./: .gitignore  README.md  pyproject.toml
alexnet/: .gitignore  AlexNet.ipynb  Untitled.ipynb
backpropagation/: Backpropagation.ipynb
lbm/: __init__.py  devices.py  workflow.py
lbm/datasets/: __init__.py  housing_locations.py  housing_prices.py  intel_images.py  noisy_sine.py  security_prices.py  student_performance.py  time_series.py  transformed_dataset.py  voo.py
lbm/loss/: __init__.py  mase.py
lbm/metrics/: __init__.py  directional_accuracy.py  return_deltas.py  return_error.py
lbm/models/: __init__.py  attention_forecaster.py  dense_forecaster.py  forecaster.py  linear.py  logistic.py  mlp.py  multi_in_linear.py  multinomial_logistic.py  normalized_gru.py  normalizer.py  price_forecaster.py  resnet.py  simple_linear.py
lbm/tranformations/: returns.py
lbm/workflow/: core.py  price_forecasts.py  visualized.py
lenet5/: lenet5.ipynb
letsbuildmodels/: devices.py  workflow.py
letsbuildmodels/datasets/: __init__.py  housing_prices.py
letsbuildmodels/models/: __init__.py
notebooks/alexnet/: AlexNet.ipynb
notebooks/backpropagation/: Backpropagation.ipynb
notebooks/encdec/: MachineTranslation.ipynb
notebooks/lstm/: LSTM.ipynb
notebooks/neural_nets/: LinearTImeSeries.ipynb  Logistic.ipynb  MLPClassifier.ipynb  MultiInLinear.ipynb  MultiOutLinear.ipynb  MultinomialLogisitic.ipynb  Neural Networks.ipynb  RNN.ipynb  Resnet.ipynb  SimpleLinear.ipynb  linear_neural_network.html
notebooks/stock_forecasting/: market_forecasts.ipynb  prices_plots.ipynb  voo_forecasts.ipynb
notebooks/transformer/: Transformer.ipynb
pytorch/: LearnPytorch.ipynb
tests/: test_devices.py  test_workflow.py
(+28 files in other folders)
