[tool.poetry]
name = "letsbuildmodels"
version = "0.1.0"
description = "Helper module for letsbuilmodels"
authors = ["Adam Cataldo"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"
pandas = "^2.2.3"
nltk = "^3.9.1"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"
keras = "^3.7.0"
tensorflow = "^2.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
