[tool.poetry]
name = "lbm"
version = "0.1.0"
description = "Module for ML examples"
authors = ["Adam Cataldo"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
kagglehub = "^0.3.7"
matplotlib = "^3.10.0"
nltk = "^3.9.1"
numpy = "^2.2.1"
pandas = "^2.2.3"
requests = "^2.32.3"
torcheval = "^0.0.7"
torch = "^2.5.1"
torchvision = "^0.20.1"
yfinance = "^0.2.52"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
